[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm>=8.0.4",
]

[project]
name = "OpenMSUtils"
description = "An open-source repository for easily processing MS-related datas"
readme = "README.md"
keywords = [
  "Mass Spectra",
  "Fasta Database",
  "Nucleic Acid",
]
license = {text = "Apache License"}
maintainers = [
  {name = "Yucheng Liao", email = "ycliao@zju.edu.cn"},
]
authors = [
  {name = "Yucheng Liao", email = "ycliao@zju.edu.cn"},
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
    "lxml",
    "tqdm",
    "numpy",
    "pandas",
]

[tool.setuptools]
packages = [
    "AnalysisUtils",
    "MolecularUtils", 
    "MSUtils",
    "SpectraUtils",
]

[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi"]

[tool.setuptools_scm]
write_to = "_version.py"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov"